--- a/javascript_01.html
+++ b/javascript_01.html
@@ -1,42 +1,54 @@
 <html>
  <head><title></title>
  	<script type="text/javascript">
- 		var byteValue = 100;
- 		var	shortValue = 30000;
- 		var intValue = 1000000000;
- 		var longValue = 900000000000000000000;
- 		var floatValue = 44.77;
- 		var doubleValue = 64.7735;
- 		var boolValue = true;
- 		var stringValue = 'javascript';
- 		var nullValue = null;
- 		var undefiendValue;
 
- 		console.log(byteValue);
- 		console.log(shortValue);
- 		console.log(intValue);
- 		console.log(longValue);
- 		console.log(floatValue);
- 		console.log(doubleValue);
- 		console.log(boolValue);
- 		console.log(stringValue);
- 		console.log(nullValue);
- 		console.log(undefiendValue);
+ 		console.log = function(msg) {
+	        var ul = document.getElementById("log");
+	        var li = document.createElement("li");
+	        li.appendChild(document.createTextNode(msg));
+	        ul.appendChild(li);
+    }
 
- 		console.log(typeof byteValue);
- 		console.log(typeof shortValue);
- 		console.log(typeof intValue);
- 		console.log(typeof longValue);
- 		console.log(typeof floatValue);
- 		console.log(typeof doubleValue);
- 		console.log(typeof boolValue);
- 		console.log(typeof stringValue);
- 		console.log(typeof nullValue);
- 		console.log(typeof undefiendValue);
+	    window.onload = function() {
+	        document.getElementById("run").onclick = function(){
+
+	 		var byteValue = 100;
+	 		var	shortValue = 30000;
+	 		var intValue = 1000000000;
+	 		var longValue = 900000000000000000000;
+	 		var floatValue = 44.77;
+	 		var doubleValue = 64.7735;
+	 		var boolValue = true;
+	 		var stringValue = 'javascript';
+	 		var nullValue = null;
+	 		var undefiendValue;
+
+	 		console.log(byteValue);
+	 		console.log(shortValue);
+	 		console.log(intValue);
+	 		console.log(longValue);
+	 		console.log(floatValue);
+	 		console.log(doubleValue);
+	 		console.log(boolValue);
+	 		console.log(stringValue);
+	 		console.log(nullValue);
+	 		console.log(undefiendValue);
+
+	 		console.log(typeof byteValue);
+	 		console.log(typeof shortValue);
+	 		console.log(typeof intValue);
+	 		console.log(typeof longValue);
+	 		console.log(typeof floatValue);
+	 		console.log(typeof doubleValue);
+	 		console.log(typeof boolValue);
+	 		console.log(typeof stringValue);
+	 		console.log(typeof nullValue);
+	 		console.log(typeof undefiendValue);
+			}
+		}
 
  	</script>
  </head>
  <body>
- 	hi
  </body>
 </html>
