--- a/javascript_02.html
+++ b/javascript_02.html
@@ -1,21 +1,37 @@
 <!DOCTYPE html5>
  <head><title></title>
  	<script type="text/javascript">
- 		var text1 = "안녕하세요.";
- 		var text2 = '안녕하세요.';
+ 		
+ 	console.log = function(msg) 
+ 	{
+        var ul = document.getElementById("log");
+        var li = document.createElement("li");
+        li.appendChild(document.createTextNode(msg));
+        ul.appendChild(li);
+    }
 
- 		var text3 = "친구가 말했다 \"수업 땡땡이 치자. F는 우리의 몫.\"";
-   		var text4 = '친구가 말했다 "수업 땡땡이 치자. F는 우리의 몫."';
+    window.onload = function() 
+    {
+        document.getElementById("run").onclick = function() 
+        {
+	
+	 		var text1 = "안녕하세요.";
+	 		var text2 = '안녕하세요.';
 
- 		var text5 = "친구가 말했다 '수업 땡땡이 치자. F는 우리의 몫.'";
-    	var text6 = '친구가 말했다 \'수업 땡땡이 치자. F는 우리의 몫.\'';
+	 		var text3 = "친구가 말했다 \"수업 땡땡이 치자. F는 우리의 몫.\"";
+	   		var text4 = '친구가 말했다 "수업 땡땡이 치자. F는 우리의 몫."';
 
-    	console.log(text1);
-    	console.log(text2);
-    	console.log(text3);
-    	console.log(text4);
-    	console.log(text5);
-    	console.log(text6);
+	 		var text5 = "친구가 말했다 '수업 땡땡이 치자. F는 우리의 몫.'";
+	    	var text6 = '친구가 말했다 \'수업 땡땡이 치자. F는 우리의 몫.\'';
+
+	    	console.log(text1);
+	    	console.log(text2);
+	    	console.log(text3);
+	    	console.log(text4);
+	    	console.log(text5);
+	    	console.log(text6);
+	    }
+	}
  	</script>
  </head>
  <body>
