--- a/javascript_03.html
+++ b/javascript_03.html
@@ -1,18 +1,33 @@
 <!DOCTYPE html5>
  <head><title></title>
  	<script type="text/javascript">
- 		var language = "javascript";
- 		console.log(language[0]);
- 		console.log(language[1]);
- 		console.log(language[2]);
- 		console.log(language[3]);
+ 				
+ 	console.log = function(msg) 
+ 	{
+        var ul = document.getElementById("log");
+        var li = document.createElement("li");
+        li.appendChild(document.createTextNode(msg));
+        ul.appendChild(li);
+    }
 
- 		language[0] ='A';
- 		language[0] ='B';
- 		language[0] ='C';
- 		language[0] ='D';
+    window.onload = function() 
+    {
+        document.getElementById("run").onclick = function() 
+	    {
+	    	var language = "javascript";
+	 		console.log(language[0]);
+	 		console.log(language[1]);
+	 		console.log(language[2]);
+	 		console.log(language[3]);
 
- 		console.log(language);
+	 		language[0] ='A';
+	 		language[0] ='B';
+	 		language[0] ='C';
+	 		language[0] ='D';
+
+	 		console.log(language);
+	 	}
+	 }
  	</script>
  </head>
  <body>
