--- a/javascript_06.html
+++ b/javascript_06.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html5>
  <head><title></title>
  	<script type="text/javascript">
- 		var a = "현재시간은 ";
- 		var b = 1;
- 		var c = 2;
- 		var d = "시 입니다.";
- 		var sum = a+b+c+d;
- 		console.log(sum);
+
+
+ 	console.log = function(msg) 
+ 	{
+        var ul = document.getElementById("log");
+        var li = document.createElement("li");
+        li.appendChild(document.createTextNode(msg));
+        ul.appendChild(li);
+    }
+
+    window.onload = function() 
+    {
+        document.getElementById("run").onclick = function() 
+        {
+	 		var a = "현재시간은 ";
+	 		var b = 1;
+	 		var c = 2;
+	 		var d = "시 입니다.";
+	 		var sum = a+b+c+d;
+	 		console.log(sum);
+	 	}
+	 }
  	</script>
  </head>
  <body>
