--- a/javascript_07.html
+++ b/javascript_07.html
@@ -1,19 +1,34 @@
 <!DOCTYPE html5>
  <head><title></title>
  	<script type="text/javascript">
- 		var a = 10;
- 		var b = 10;
- 		var c = "10";
 
- 		console.log(a==b);
- 		console.log(a==c);
+ 	console.log = function(msg) 
+ 	{
+        var ul = document.getElementById("log");
+        var li = document.createElement("li");
+        li.appendChild(document.createTextNode(msg));
+        ul.appendChild(li);
+    }
 
- 		console.log(a===b);
- 		console.log(a===c);
+    window.onload = function() 
+    {
+        document.getElementById("run").onclick = function() 
+        {
+	 		var a = 10;
+	 		var b = 10;
+	 		var c = "10";
+
+	 		console.log(a==b);
+	 		console.log(a==c);
+
+	 		console.log(a===b);
+	 		console.log(a===c);
 
 
- 		console.log(a==b && typeof (a) == typeof(b));
- 		console.log(a==c && typeof (a) == typeof(c));
+	 		console.log(a==b && typeof (a) == typeof(b));
+	 		console.log(a==c && typeof (a) == typeof(c));
+	 	}
+	 }
 
  	</script>
  </head>
