--- a/javascript_08.html
+++ b/javascript_08.html
@@ -1,20 +1,36 @@
 <!DOCTYPE html5>
  <head><title></title>
  	<script type="text/javascript">
-      console.log(true && false); // false
-      console.log(true && true); // true
-      console.log("string" && true); // true
-      console.log(true && ""); // ""
-      console.log(true && "string"); // "string"
-      console.log(false && ""); // false
-      console.log(false && "string"); // false
-      console.log(5 && 0); // 0
-      console.log(5 && -6); // -6
-      console.log(5 && false); // false
-      console.log(null && 0); // null
-      console.log(null && ""); // null
-      console.log(null && false); // null
-      console.log("yes" && "no"); // "no"
+
+
+      console.log = function(msg) 
+      {
+        var ul = document.getElementById("log");
+        var li = document.createElement("li");
+        li.appendChild(document.createTextNode(msg));
+        ul.appendChild(li);
+     }
+ 
+    window.onload = function() 
+    {
+        document.getElementById("run").onclick = function() 
+        {     
+            console.log(true && false); // false
+            console.log(true && true); // true
+            console.log("string" && true); // true
+            console.log(true && ""); // ""
+            console.log(true && "string"); // "string"
+            console.log(false && ""); // false
+            console.log(false && "string"); // false
+            console.log(5 && 0); // 0
+            console.log(5 && -6); // -6
+            console.log(5 && false); // false
+            console.log(null && 0); // null
+            console.log(null && ""); // null
+            console.log(null && false); // null
+            console.log("yes" && "no"); // "no"
+            }
+      }
  	</script>
  </head>
  <body>
