--- a/javascript_13.html
+++ b/javascript_13.html
@@ -2,30 +2,45 @@
 <html>
 <head>
     <script type="text/javascript">
-      var day;
-      switch (new Date().getDay()) {
-          case 0:
-              day = "Sunday";
-              break;
-          case 1:
-              day = "Monday";
-              break;
-          case 2:
-              day = "Tuesday";
-              break;
-          case 3:
-              day = "Wednesday";
-              break;
-          case 4:
-              day = "Thursday";
-              break;
-          case 5:
-              day = "Friday";
-              break;
-          case 6:
-              day = "Saturday";
+
+        console.log = function(msg) 
+         {
+          var ul = document.getElementById("log");
+          var li = document.createElement("li");
+          li.appendChild(document.createTextNode(msg));
+          ul.appendChild(li);
       }
-      console.log(day);
+
+      window.onload = function() 
+      {
+          document.getElementById("run").onclick = function() 
+          {
+              var day;
+              switch (new Date().getDay()) {
+                  case 0:
+                      day = "Sunday";
+                      break;
+                  case 1:
+                      day = "Monday";
+                      break;
+                  case 2:
+                      day = "Tuesday";
+                      break;
+                  case 3:
+                      day = "Wednesday";
+                      break;
+                  case 4:
+                      day = "Thursday";
+                      break;
+                  case 5:
+                      day = "Friday";
+                      break;
+                  case 6:
+                      day = "Saturday";
+              }
+              console.log(day);
+            }
+          }
     </script>
 </head>
 <body>
