--- a/javascript_14.html
+++ b/javascript_14.html
@@ -2,9 +2,24 @@
 <html>
 <head>
     <script type="text/javascript">
-      for (var i = 0; i < 5; i++) {
-          console.log("The number is " + i);
+
+     console.log = function(msg) 
+    {
+          var ul = document.getElementById("log");
+          var li = document.createElement("li");
+          li.appendChild(document.createTextNode(msg));
+          ul.appendChild(li);
       }
+
+      window.onload = function() 
+      {
+          document.getElementById("run").onclick = function() 
+          {
+		      for (var i = 0; i < 5; i++) {
+		          console.log("The number is " + i);
+		      }
+		   }
+	   }
     </script>
 </head>
 <body>
