--- a/javascript_15.html
+++ b/javascript_15.html
@@ -2,9 +2,24 @@
 <html>
 <head>
     <script type="text/javascript">
-      while (i < 10) {
-          console.log("The number is " + i);
-          i++;
+
+    console.log = function(msg) 
+    {
+          var ul = document.getElementById("log");
+          var li = document.createElement("li");
+          li.appendChild(document.createTextNode(msg));
+          ul.appendChild(li);
+      }
+
+      window.onload = function() 
+      {
+          document.getElementById("run").onclick = function() 
+          {
+		      while (i < 10) {
+		          console.log("The number is " + i);
+		          i++;
+		  }
+		}
       }
     </script>
 </head>
