--- a/javascript_16.html
+++ b/javascript_16.html
@@ -2,10 +2,25 @@
 <html>
 <head>
     <script type="text/javascript">
-      while {
-          console.log("The number is " + i);
-          i++;
-      } do (i < 10);
+
+    console.log = function(msg) 
+    {
+          var ul = document.getElementById("log");
+          var li = document.createElement("li");
+          li.appendChild(document.createTextNode(msg));
+          ul.appendChild(li);
+      }
+
+      window.onload = function() 
+      {
+          document.getElementById("run").onclick = function() 
+          {
+		      while {
+		          console.log("The number is " + i);
+		          i++;
+		      } do (i < 10);
+		  }
+		}
     </script>
 </head>
 <body>
