--- a/javascript_17.html
+++ b/javascript_17.html
@@ -1,10 +1,26 @@
 <html>
 <head>
     <script type="text/javascript">
-      for (i = 0; i < 10; i++) {
-          if (i === 3) { break; }
-          console.log("The number is " + i);
+
+    console.log = function(msg) 
+    {
+          var ul = document.getElementById("log");
+          var li = document.createElement("li");
+          li.appendChild(document.createTextNode(msg));
+          ul.appendChild(li);
       }
+
+      window.onload = function() 
+      {
+          document.getElementById("run").onclick = function() 
+          {
+		      for (i = 0; i < 10; i++) {
+		          if (i === 3) { break; }
+		          console.log("The number is " + i);
+		      }
+		}
+	}
+
     </script>
 </head>
 <body>
