--- a/javascript_22.html
+++ b/javascript_22.html
@@ -2,15 +2,30 @@
 <html>
 <head>
     <script type="text/javascript">
-      var x = 9.656;
-      var a = x.toFixed(0);
-      var b = x.toFixed(2);
-      var c = x.toFixed(4);
-      var d = x.toFixed(6);
-      console.log(typeof(a) + " : " + a); // string : 10
-      console.log(typeof(b) + " : " + b); // string : 9.66
-      console.log(typeof(c) + " : " + c); // string : 9.6560
-      console.log(typeof(d) + " : " + d); // string : 9.656000
+    console.log = function(msg) 
+    {
+          var ul = document.getElementById("log");
+          var li = document.createElement("li");
+          li.appendChild(document.createTextNode(msg));
+          ul.appendChild(li);
+      }
+
+      window.onload = function() 
+      {
+          document.getElementById("run").onclick = function() 
+          {      
+            var x = 9.656;
+            var a = x.toFixed(0);
+            var b = x.toFixed(2);
+            var c = x.toFixed(4);
+            var d = x.toFixed(6);
+            console.log(typeof(a) + " : " + a); // string : 10
+            console.log(typeof(b) + " : " + b); // string : 9.66
+            console.log(typeof(c) + " : " + c); // string : 9.6560
+            console.log(typeof(d) + " : " + d); // string : 9.656000
+          }
+        }
+      
     </script>
 </head>
 <body>
