--- a/javascript_23.html
+++ b/javascript_23.html
@@ -2,15 +2,29 @@
 <html>
 <head>
     <script type="text/javascript">
-      var x = 9.656;
-      var a = x.toPrecision();
-      var b = x.toPrecision(2);
-      var c = x.toPrecision(4);
-      var d = x.toPrecision(6);
-      console.log(typeof(a) + " : " + a); // string : 9.656
-      console.log(typeof(b) + " : " + b); // string : 9.7
-      console.log(typeof(c) + " : " + c); // string : 9.656
-      console.log(typeof(d) + " : " + d); // string : 9.65600
+    console.log = function(msg) 
+    {
+          var ul = document.getElementById("log");
+          var li = document.createElement("li");
+          li.appendChild(document.createTextNode(msg));
+          ul.appendChild(li);
+      }
+
+      window.onload = function() 
+      {
+          document.getElementById("run").onclick = function() 
+          {      
+              var x = 9.656;
+              var a = x.toPrecision();
+              var b = x.toPrecision(2);
+              var c = x.toPrecision(4);
+              var d = x.toPrecision(6);
+              console.log(typeof(a) + " : " + a); // string : 9.656
+              console.log(typeof(b) + " : " + b); // string : 9.7
+              console.log(typeof(c) + " : " + c); // string : 9.656
+              console.log(typeof(d) + " : " + d); // string : 9.65600
+            }
+          }
     </script>
 </head>
 <body>
