--- a/javascript_24.html
+++ b/javascript_24.html
@@ -2,14 +2,28 @@
 <html>
 <head>
     <script type="text/javascript">
-      var a = Number("1000");
-      var b = Number("3.14");
-      var c = Number("");
-      var d = Number("abcd");
-      console.log(typeof(a) + " : " + a); // number : 1000
-      console.log(typeof(b) + " : " + b); // number : 3.14
-      console.log(typeof(c) + " : " + c); // number : 0
-      console.log(typeof(d) + " : " + d); // number : NaN
+    console.log = function(msg) 
+    {
+          var ul = document.getElementById("log");
+          var li = document.createElement("li");
+          li.appendChild(document.createTextNode(msg));
+          ul.appendChild(li);
+      }
+
+      window.onload = function() 
+      {
+          document.getElementById("run").onclick = function() 
+          {      
+            var a = Number("1000");
+            var b = Number("3.14");
+            var c = Number("");
+            var d = Number("abcd");
+            console.log(typeof(a) + " : " + a); // number : 1000
+            console.log(typeof(b) + " : " + b); // number : 3.14
+            console.log(typeof(c) + " : " + c); // number : 0
+            console.log(typeof(d) + " : " + d); // number : NaN
+          }
+        }
     </script>
 </head>
 <body>
