--- a/javascript_07.html
+++ b/javascript_07.html
@@ -32,6 +32,30 @@
 
  	</script>
  </head>
- <body>
- </body>
+<body>
+    <div>
+        <textarea cols = "100" rows="40">
+	 		var a = 10;
+	 		var b = 10;
+	 		var c = "10";
+
+	 		document.write(a==b);
+	 		document.write(a==c);
+
+	 		document.write(a===b);
+	 		document.write(a===c);
+
+
+	 		document.write(a==b && typeof (a) == typeof(b));
+	 		document.write(a==c && typeof (a) == typeof(c));
+        </textarea>
+    </div>
+    <div>
+        <input type="button" id="run" value="실행"/>
+    </div>
+    <div>
+        <ul id="log" style="list-style-type:circle"></ul>
+    </div>    
+</body>
+
 </html>
