--- a/javascript_29.html
+++ b/javascript_29.html
@@ -23,5 +23,20 @@
     </script>
 </head>
 <body>
+    <div>
+        <textarea cols = "100" rows="40">
+           var age;
+           document.write(age); // undefined
+           age = 10;
+           document.write(age); // 10 
+        </textarea>
+    </div>
+    <div>
+        <input type="button" id="run" value="실행"/>
+    </div>
+    <div>
+        <ul id="log" style="list-style-type:circle"></ul>
+    </div>    
 </body>
+
 </html>
