--- a/javascript_04.html
+++ b/javascript_04.html
@@ -27,6 +27,25 @@
 	 }
  	</script>
  </head>
- <body>
- </body>
+<body>
+    <div>
+        <textarea cols = "100" rows="40">
+        var a =40;
+            var b =30;
+            var c =20;
+            var d =5;
+            var e = 10;
+
+            var sum = (a+b-c)*d/c;
+            document.write(sum);
+        </textarea>
+    </div>
+    <div>
+        <input type="button" id="run" value="실행"/>
+    </div>
+    <div>
+        <ul id="log" style="list-style-type:circle"></ul>
+    </div>    
+</body>
+
 </html>
