--- a/javascript_11.html
+++ b/javascript_11.html
@@ -33,5 +33,27 @@
     </script>
 </head>
 <body>
+    <div>
+        <textarea cols = "100" rows="40">
+              var greeting;
+              var time = 12;
+
+              if (time < 10) {
+                  greeting = "Good morning";
+              } else if (time < 20) {
+                  greeting = "Good day";
+              } else {
+                  greeting = "Good evening";
+              }
+              document.write(greeting);
+        </textarea>
+    </div>
+    <div>
+        <input type="button" id="run" value="실행"/>
+    </div>
+    <div>
+        <ul id="log" style="list-style-type:circle"></ul>
+    </div>    
 </body>
+
 </html>      
