--- a/javascript_15.html
+++ b/javascript_15.html
@@ -24,5 +24,19 @@
     </script>
 </head>
 <body>
+    <div>
+        <textarea cols = "100" rows="40">
+          while (i < 10) {
+              document.write("The number is " + i);
+              i++;
+        </textarea>
+    </div>
+    <div>
+        <input type="button" id="run" value="실행"/>
+    </div>
+    <div>
+        <ul id="log" style="list-style-type:circle"></ul>
+    </div>    
 </body>
+
 </html>       
