--- a/javascript_16.html
+++ b/javascript_16.html
@@ -24,5 +24,20 @@
     </script>
 </head>
 <body>
+    <div>
+        <textarea cols = "100" rows="40">
+  while {
+              document.write("The number is " + i);
+              i++;
+          } do (i < 10); 
+        </textarea>
+    </div>
+    <div>
+        <input type="button" id="run" value="실행"/>
+    </div>
+    <div>
+        <ul id="log" style="list-style-type:circle"></ul>
+    </div>    
 </body>
+
 </html>       
