--- a/javascript_18.html
+++ b/javascript_18.html
@@ -24,5 +24,19 @@
     </script>
 </head>
 <body>
+    <div>
+        <textarea cols = "100" rows="40">
+          for (i = 0; i < 10; i++) {
+              if (i === 3) { continue; }
+              document.write("The number is " + i);
+        </textarea>
+    </div>
+    <div>
+        <input type="button" id="run" value="실행"/>
+    </div>
+    <div>
+        <ul id="log" style="list-style-type:circle"></ul>
+    </div>    
 </body>
+
 </html>
