--- a/javascript_20.html
+++ b/javascript_20.html
@@ -26,5 +26,23 @@
     </script>
 </head>
 <body>
+    <div>
+        <textarea cols = "100" rows="40">
+          var x = 10;
+          var a = x.toString();
+          var b = (123).toString();
+          var c = (100 + 23).toString();
+          document.write(typeof(a) + " : " + a); // string : 10
+          document.write(typeof(b) + " : " + b); // string : 123
+          document.write(typeof(c) + " : " + c); // string : 123
+        </textarea>
+    </div>
+    <div>
+        <input type="button" id="run" value="실행"/>
+    </div>
+    <div>
+        <ul id="log" style="list-style-type:circle"></ul>
+    </div>    
 </body>
+
 </html>
