--- a/javascript_21.html
+++ b/javascript_21.html
@@ -26,5 +26,24 @@
     </script>
 </head>
 <body>
+    <div>
+        <textarea cols = "100" rows="40">
+          var x = 9.656;
+          var a = x.toExponential(2);
+          var b = x.toExponential(4);
+          var c = x.toExponential(6);
+          document.write(typeof(a) + " : " + a); // string : 9.66e+0
+          document.write(typeof(b) + " : " + b); // string : 9.6560e+0
+          document.write(typeof(c) + " : " + c); // string : 9.656000e+0
+      } 
+        </textarea>
+    </div>
+    <div>
+        <input type="button" id="run" value="실행"/>
+    </div>
+    <div>
+        <ul id="log" style="list-style-type:circle"></ul>
+    </div>    
 </body>
+
 </html>
