--- a/javascript_24.html
+++ b/javascript_24.html
@@ -27,5 +27,24 @@
     </script>
 </head>
 <body>
+    <div>
+        <textarea cols = "100" rows="40">
+            var a = Number("1000");
+            var b = Number("3.14");
+            var c = Number("");
+            var d = Number("abcd");
+            document.write(typeof(a) + " : " + a); // number : 1000
+            document.write(typeof(b) + " : " + b); // number : 3.14
+            document.write(typeof(c) + " : " + c); // number : 0
+            document.write(typeof(d) + " : " + d); // number : NaN
+        </textarea>
+    </div>
+    <div>
+        <input type="button" id="run" value="실행"/>
+    </div>
+    <div>
+        <ul id="log" style="list-style-type:circle"></ul>
+    </div>    
 </body>
+
 </html>
