--- a/javascript_25.html
+++ b/javascript_25.html
@@ -29,5 +29,26 @@
     </script>
 </head>
 <body>
+    <div>
+        <textarea cols = "100" rows="40">
+            var a = parseInt("10");
+            var b = parseInt("10.3");
+            var c = parseInt("10 20 30");
+            var d = parseInt("10 years");
+            var e = parseInt("years 10");
+            document.write(typeof(a) + " : " + a); // number : 10
+            document.write(typeof(b) + " : " + b); // number : 10
+            document.write(typeof(c) + " : " + c); // number : 10
+            document.write(typeof(d) + " : " + d); // number : 10
+            document.write(typeof(e) + " : " + e); // number : NaN 
+        </textarea>
+    </div>
+    <div>
+        <input type="button" id="run" value="실행"/>
+    </div>
+    <div>
+        <ul id="log" style="list-style-type:circle"></ul>
+    </div>    
 </body>
+
 </html>
