--- a/javascript_27.html
+++ b/javascript_27.html
@@ -21,5 +21,17 @@
     </script>
 </head>
 <body>
+    <div>
+        <textarea cols = "100" rows="40">
+            document.write(age); // Uncaught ReferenceError: age is not defined
+        </textarea>
+    </div>
+    <div>
+        <input type="button" id="run" value="실행"/>
+    </div>
+    <div>
+        <ul id="log" style="list-style-type:circle"></ul>
+    </div>    
 </body>
+
 </html>
